# NSPanelManager

./: .actrc  .gitignore  .gitmodules  404.html  CNAME  HOMEY_INTEGRATION.md  README.md  convert_to_565_color_space.txt  index.html  opensearch.xml  repository.yaml  sitemap.xml  stop.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-doc.yml  deploy-doc.yml.disabled  docker-publish.yml  publish-latest.yml  release.yml  stable-release.yml  update-manual.yml  update-manual.yml.disabled
HMI files/: nspmanager.tft  readme.txt  usversion.tft
MQTTManager-CPP/: .dockerignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  compile_commands.json  conan_graph.html  conanfile.py  conanfile.txt  docker-build_and_run_dev.sh  graph.html  run.sh
MQTTManager-CPP/include/: home_assistant_manager.cpp  home_assistant_manager.hpp
MQTTManager-CPP/include/entity/: entity.hpp
MQTTManager-CPP/include/entity_manager/: entity_manager.cpp  entity_manager.hpp
MQTTManager-CPP/include/home_assistant_manager/: home_assistant_manager.cpp
MQTTManager-CPP/include/light/: home_assistant_light.cpp  light.cpp  light.hpp  openhab_light.cpp  openhab_light.hpp
MQTTManager-CPP/include/mqtt_manager/: mqtt_manager.cpp  mqtt_manager.hpp
MQTTManager-CPP/include/mqtt_manager_config/: mqtt_manager_config.cpp  mqtt_manager_config.hpp
MQTTManager-CPP/include/nspanel/: nspanel.cpp  nspanel.hpp
MQTTManager-CPP/include/openhab_manager/: openhab_manager.cpp  openhab_manager.hpp
MQTTManager-CPP/include/room/: room.cpp  room.hpp
MQTTManager-CPP/include/scenes/: nspm_scene.cpp  nspm_scene.hpp
MQTTManager-CPP/include/websocket_server/: websocket_server.cpp  websocket_server.hpp
MQTTManager-CPP/src/: main.cpp
MQTTManager-CPP/templates/: nspanel_index_box.html
NSPanelManager/: docker-console.sh
NSPanelManager/web/: mqtt_manager.py
assets/css/: styles.1a0182f7.css  styles.c9a450b7.css
assets/js/: 0058b4c6.9156b248.js  009f1e98.23917586.js  009f1e98.90a1bae0.js  02153fe1.c6765e89.js  02153fe1.ffa89ccc.js  039b54ff.78cdc559.js  039b54ff.a3a439ab.js  0f265c92.357c639c.js  0f265c92.635f0131.js  1259.1998578b.js  165.21f7ed54.js  165.b8be3864.js  (+113 more)
demo/: index.html
docker/: .dockerignore  Dockerfile  README.md  config.yaml  docker-build_and_run.sh  docker-build_and_run_dev.sh  docker-cross_build.sh  docker-stop_and_rm.sh  message.txt  ruff.toml  test.bin~  test.biz~
docker-beta/: config.yaml
docker/MQTTManager/: CMakeLists.txt  CMakeUserPresets.json  Makefile  cleanup_build.sh  cmake_install.cmake  compilation_cleanup.sh  compile_mqttmanager.sh  compile_mqttmanager.sh.bak  conanfile.py  fix_compile_commands_path.sh.example  graph.html  install_cmake.sh  requirements.txt
docker/MQTTManager/include/: home_assistant_manager.cpp
docker/MQTTManager/include/button/: button.cpp  button.hpp  home_assistant_button.cpp  home_assistant_button.hpp  homey_button.cpp  homey_button.hpp  nspm_button.cpp  nspm_button.hpp
docker/MQTTManager/include/command_manager/: command_manager.cpp  command_manager.hpp
docker/MQTTManager/include/database_manager/: database_manager.cpp  database_manager.hpp
docker/MQTTManager/include/entity/: entity.cpp  entity.hpp  entity_icons.hpp
docker/MQTTManager/include/entity_manager/: entity_manager.cpp  entity_manager.hpp
docker/MQTTManager/include/home_assistant_manager/: home_assistant_manager.cpp  home_assistant_manager.hpp
docker/MQTTManager/include/homey_manager/: homey_manager.cpp  homey_manager.hpp
docker/MQTTManager/include/ipc_handler/: ipc_handler.cpp  ipc_handler.hpp
docker/MQTTManager/include/light/: home_assistant_light.cpp  home_assistant_light.hpp  homey_light.cpp  homey_light.hpp  light.cpp  light.hpp  openhab_light.cpp  openhab_light.hpp
docker/MQTTManager/include/mqtt_manager/: mqtt_manager.cpp  mqtt_manager.hpp
docker/MQTTManager/include/mqtt_manager_config/: mqtt_manager_config.cpp  mqtt_manager_config.hpp
docker/MQTTManager/include/nextion_image_server/: nextion_image_server.cpp  nextion_image_server.hpp
docker/MQTTManager/include/nspanel/: nspanel.cpp  nspanel.hpp
docker/MQTTManager/include/openhab_manager/: openhab_manager.cpp  openhab_manager.hpp
docker/MQTTManager/include/pipe_handler/: pipe_handler.cpp  pipe_handler.hpp
docker/MQTTManager/include/protobuf/: general.pb.cc  general.pb.h  mqttmanager.pb.cc  mqttmanager.pb.h  protobuf_formats.pb.cc  protobuf_formats.pb.h  protobuf_general.pb.cc  protobuf_general.pb.h  protobuf_mqttmanager.pb.cc  protobuf_mqttmanager.pb.h  protobuf_nspanel.pb.cc  protobuf_nspanel.pb.h  protobuf_nspanel_entity.pb.cc  protobuf_nspanel_entity.pb.h
docker/MQTTManager/include/room/: room.cpp  room.hpp  room_entities_page.cpp  room_entities_page.hpp
docker/MQTTManager/include/scenes/: home_assistant_scene.cpp  home_assistant_scene.hpp  homey_scene.cpp  homey_scene.hpp  nspm_scene.cpp  nspm_scene.hpp  openhab_scene.cpp  openhab_scene.hpp  scene.cpp  scene.hpp
docker/MQTTManager/include/switch/: home_assistant_switch.cpp  home_assistant_switch.hpp  homey_switch.cpp  homey_switch.hpp  openhab_switch.cpp  openhab_switch.hpp  switch.cpp  switch.hpp
docker/MQTTManager/include/thermostat/: home_assistant_thermostat.cpp  home_assistant_thermostat.hpp  homey_thermostat.cpp  homey_thermostat.hpp  openhab_thermostat.cpp  openhab_thermostat.hpp  thermostat.cpp  thermostat.hpp
docker/MQTTManager/include/weather/: weather.cpp  weather.hpp  weather_icons.hpp
docker/MQTTManager/include/web_helper/: WebHelper.cpp  WebHelper.hpp
docker/MQTTManager/include/websocket_server/: websocket_server.cpp  websocket_server.hpp
docker/MQTTManager/src/: main.cpp
docker/MQTTManager/templates/: nspanel_index_box.html  nspanel_index_view.html  nspanel_status_header.html
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
protobuf_firmware/: protobuf_nspanel.pb-c.c  protobuf_nspanel.pb-c.h  protobuf_nspanel_entity.pb-c.c  protobuf_nspanel_entity.pb-c.h
screenshots/: index.html
search/: index.html
unraid/: nspanelmanager.xml
(+567 files in other folders)
